--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 
 <!-- SPECS -->
-<section id="specs">
+<section id="SPECS">
   <div class="container">
       <div class="row align-items-center">
           <div class="col-lg-6 ">
@@ -71,9 +71,9 @@
 </section>
 
 <!-- Prize -->
-<section id="prizes">
+<section id="menu">
   <div class="container">
-      <h2 class="text-center">Prize</h2>
+      <h2 class="text-center">MENU</h2>
       <p class="text-center text-light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, eaque ut voluptas quidem illum consequatur!</p>
       <div class="row">
           <div class="col-lg-4">
@@ -82,7 +82,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Coffee Americano</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Go somewhere</a>
+                    <a href="#" class="btn btn-success">Select</a>
                   </div>
                 </div>
           </div>
@@ -92,7 +92,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Coffee Machiciatto</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Go somewhere</a>
+                    <a href="#" class="btn btn-success">Select</a>
                   </div>
                 </div>
           </div>
@@ -102,7 +102,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Dark Coffee</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Go somewhere</a>
+                    <a href="#" class="btn btn-success">Select</a>
                   </div>
                 </div>
           </div>
