--- a/index.html
+++ b/index.html
@@ -2,113 +2,249 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iphone 15</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="Style.css">
+
 </head>
 
 <body>
-<!-- NavbarSS -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">coffe</a>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#specs">Specs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#MENU"></MENU></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">COFFEE & TASTE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
 
-<!-- Base -->
-  <div id="banner" class="d-flex align-items-center"> 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-light">
-                <h1>COFFEE BREAK</h1>              
-                <p>SIP AND RELAX</p>
+            </div>
+        </div>
+    </nav>
+
+    <div id="banner" class="d-flex align-items-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-black">
+                    <h1> Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis accusamus et sequi at quo,
+                        dolor tempore esse id corrupti!</p>
+                    <a href="#about" class="btn btn-brand">Please Click Here!</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <l-- ABOUT SECTION -->
+        <section id="about">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <img src="KOPE.png" alt="">
+                    </div>
+                    <div class="col-lg-6 text-light">
+                        <h2>ABOUT</h2>
+                        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione libero quis, sequi nostrum
+                            adipisci veritatis illo consectetur nisi minus delectus assumenda dolore iste eveniet
+                            expedita tenetur dicta, placeat quas ab sapiente inventore asperiores pariatur! Numquam vel
+                            consectetur nesciunt ullam! Quae, cumque odio quas soluta sapiente facilis perspiciatis
+                            ducimus eaque iste?</p>
+                        <a href="#services" class="btn btn-brand">Please Click Here!</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-<!-- SPECS -->
-<section id="SPECS">
-  <div class="container">
-      <div class="row align-items-center">
-          <div class="col-lg-6 ">
-              <img src="dark brown.jpg" alt="">
-          </div>
-          <div class="col-lg-6 text-light">
-              <h2>Specs</h2>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos beatae qui animi eaque perspiciatis quis.</p>
-              <a href="" class="btn btn-success">Please click here</a>
-          </div>
-      </div>
-  </div>
-</section>
+        <!--SERVICES-->
+        <section id="services">
+            <div class="container">
+                <h2 class="text-center">SERVICES</h2>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card text-center py-3" style="width: 18rem;">
+                            <img src="iii-001.png" class="card-img-top Ror mx-auto" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card text-center py-3" style="width: 18rem;">
+                            <img src="KOPE.png" class="card-img-top Ror mx-auto" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card text-center py-3" style="width: 18rem;">
+                            <img src="c:\CCIT-06.F\iii-001.png" class="card-img-top Ror mx-auto" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-<!-- Prize -->
-<section id="menu">
-  <div class="container">
-      <h2 class="text-center">MENU</h2>
-      <p class="text-center text-light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, eaque ut voluptas quidem illum consequatur!</p>
-      <div class="row">
-          <div class="col-lg-4">
-              <div class="card text-center" style="width: 18rem;">
-                  <img src="dark brown.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Coffee Americano</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Select</a>
-                  </div>
+            </div>
+        </section>
+
+        <!-- CTA -->
+        <div id="cta" class="d-flex align-items-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-black">
+                        <h1> Lorem ipsum dolor sit amet consectetur adipisicing. </h1>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis accusamus et sequi at
+                            quo,
+                            dolor tempore esse id corrupti!</p>
+                        <a href="#about" class="btn btn-brand">Please Click Here!</a>
+                    </div>
                 </div>
-          </div>
-          <div class="col-lg-4">
-              <div class="card text-center" style="width: 18rem;">
-                  <img src="dark brown.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Coffee Machiciatto</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Select</a>
-                  </div>
+            </div>
+        </div>
+
+        <!-- REVIEW SECTION -->
+        <section id="reviews" >
+            <div class="container">
+                <h2 class="text-center"> REVIEWS </h2>
+                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo magni iste rem temporibus blanditiis
+                    autem ut voluptas! Sint nam recusandae vero maxime quae? Numquam minima, debitis dolores ab fugit
+                    obcaecati.
+                </p>
+            </div>
+
+            <!--items-->
+            <div class="row row-cols-lg-3">
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="boy.png" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="">@client</a> 
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, modi fuga,
+                            impedit et maiores sed molestias accusantium deserunt nostrum fugit dolorem debitis
+                            aperiam ratione ex. Obcaecati maiores necessitatibus numquam cumque.</p>
+                    </div>
                 </div>
-          </div>
-          <div class="col-lg-4">
-              <div class="card text-center" style="width: 18rem;">
-                  <img src="dark brown.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Dark Coffee</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Select</a>
-                  </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="boy.png" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="">@client</a> 
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, modi fuga,
+                            impedit et maiores sed molestias accusantium deserunt nostrum fugit dolorem debitis
+                            aperiam ratione ex. Obcaecati maiores necessitatibus numquam cumque.</p>
+                    </div>
                 </div>
-          </div>
-      </div>
-  </div>
-</section>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="boy.png" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="">@client</a> 
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, modi fuga,
+                            impedit et maiores sed molestias accusantium deserunt nostrum fugit dolorem debitis
+                            aperiam ratione ex. Obcaecati maiores necessitatibus numquam cumque.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="boy.png" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="">@client</a> 
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, modi fuga,
+                            impedit et maiores sed molestias accusantium deserunt nostrum fugit dolorem debitis
+                            aperiam ratione ex. Obcaecati maiores necessitatibus numquam cumque.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="boy.png" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="">@client</a> 
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, modi fuga,
+                            impedit et maiores sed molestias accusantium deserunt nostrum fugit dolorem debitis
+                            aperiam ratione ex. Obcaecati maiores necessitatibus numquam cumque.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="testimonials mt-4">
+                        <div class="d-flex">
+                            <img src="boy.png" alt="">
+                            <div class="ms-2 mb-2">
+                                <h3>Client Name</h3>
+                                <a href="">@client</a> 
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, modi fuga,
+                            impedit et maiores sed molestias accusantium deserunt nostrum fugit dolorem debitis
+                            aperiam ratione ex. Obcaecati maiores necessitatibus numquam cumque.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 </body>
 
