--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <div id="banner" class="d-flex align-items-center">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-black">
-                    <h1> Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis accusamus et sequi at quo,
-                        dolor tempore esse id corrupti!</p>
+                <div class="col-lg-12 text-light">
+                    <h1>DAILY FIX!</h1>
+                    <h1>ESPRESSO YOURSELF</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur</p>
                     <a href="#about" class="btn btn-brand">Please Click Here!</a>
                 </div>
             </div>
@@ -72,9 +72,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <img src="KOPE.png" alt="">
+                        <img src="vvv-007.jpg" alt="" style="border-radius: 20px;">
                     </div>
-                    <div class="col-lg-6 text-light">
+                    <div class="col-lg-6 text-dark">
                         <h2>ABOUT</h2>
                         <h3>Lorem ipsum dolor sit, amet consectetur adipisicing.</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione libero quis, sequi nostrum
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="card text-center py-3" style="width: 18rem;">
-                            <img src="iii-001.png" class="card-img-top Ror mx-auto" alt="...">
+                            <img src="rar.jpg" class="card-img-top Ror mx-auto" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
@@ -107,7 +107,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="card text-center py-3" style="width: 18rem;">
-                            <img src="KOPE.png" class="card-img-top Ror mx-auto" alt="...">
+                            <img src="rar.jpg" class="card-img-top Ror mx-auto" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
@@ -118,7 +118,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="card text-center py-3" style="width: 18rem;">
-                            <img src="c:\CCIT-06.F\iii-001.png" class="card-img-top Ror mx-auto" alt="...">
+                            <img src="rar.jpg   " class="card-img-top Ror mx-auto" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
@@ -136,7 +136,7 @@
         <div id="cta" class="d-flex align-items-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 text-black">
+                    <div class="col-lg-12 text-light">
                         <h1> Lorem ipsum dolor sit amet consectetur adipisicing. </h1>
                         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis accusamus et sequi at
                             quo,
